Convert a few entitlements to records (#118705)
* Convert a few entitlements to records

* Make SetHttpsConnectionPropertiesEntitlement a record and fix tests